Temperature parsing improved, store station name as byte array